--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -385,8 +385,8 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            mvn -f $pomPath clean install -q
-            Start-Job -ScriptBlock { mvn exec:java -f $pomPath }
+            mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
+            Start-Job -ScriptBlock { mvn exec:java -f $(Build.SourcesDirectory)/testProxy/pom.xml }
 
       - task: CmdLine@2
         displayName: 'Run tests'
