--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -172,7 +172,7 @@ jobs:
 
       - task: PublishTestResults@2
         displayName: "Publish Test Results **/*.trx"
-        condition: succeeded()
+        condition: always()
         inputs:
           testRunner: VSTest
           testRunTitle: "Linux Tests ($(FRAMEWORK)) (Attempt $(System.JobAttempt))"
@@ -180,7 +180,7 @@ jobs:
 
       - task: CopyFiles@2
         displayName: "Copy files to the artifacts folder"
-        condition: succeeded()
+        condition: always()
         inputs:
           SourceFolder: "$(Build.SourcesDirectory)"
           Contents: "**/*.trx"
@@ -188,13 +188,13 @@ jobs:
 
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: testresults_linux_$(FRAMEWORK)"
-        condition: succeeded()
+        condition: always()
         inputs:
           ArtifactName: testresults_linux_$(FRAMEWORK)
         
       - task: ComponentGovernanceComponentDetection@0
         displayName: Component Governance Detection
-        condition: succeeded()
+        condition: always()
         inputs:
           scanType: 'Register'
           verbosity: 'Verbose'
@@ -327,11 +327,11 @@ jobs:
           testRunTitle: "Windows Tests ($(FRAMEWORK)) (Attempt $(System.JobAttempt))"
           platform: Windows
           configuration: "Debug UT + Release E2E ($(FRAMEWORK))"
-        condition: succeeded()
+        condition: always()
         
       - task: ComponentGovernanceComponentDetection@0
         displayName: Component Governance Detection
-        condition: succeeded()
+        condition: always()
         inputs:
           scanType: 'Register'
           verbosity: 'Verbose'
