--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -27,31 +27,8 @@ jobs:
     pool:
       vmImage: windows-2022
     steps:     
-    - task: AzureCLI@2
-      name: deployCloudTestResources 
-      inputs:
-        azureSubscription: 'iot hub sdk service connection'
-        scriptType: 'pscore'
-        scriptLocation: 'inlineScript'
-        pwsh: true
-        inlineScript: |
-          $jsonContent = az account show | ConvertFrom-Json
-          $subscriptionId = $jsonContent.Id
-
-          $uniqueSuffixLength = 5
-          $characters = 'abcdefghijklmnopqrstuvwxyz'.ToCharArray()
-          $CloudResourceUniqueSuffix = -join ($characters | Get-Random -Count $uniqueSuffixLength)
-
-          $resourceGroupName = 'dotnetsdkgate'+$CloudResourceUniqueSuffix
-
-          Write-Host "##vso[task.setvariable variable=RESOURCE_GROUP_NAME;isOutput=true]$resourceGroupName"
-
-          $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup.ps1 -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup $resourceGroupName -GroupCertificatePassword someCertPass -TestCertificateOutputLocation $(Pipeline.Workspace)/test-certificates
-
-    - publish:  $(Pipeline.Workspace)
-      displayName: 'save test certificates locally'
-      artifact: test-certificates
-
+    - template: templates/DeployCloudTestResources.yaml
+    
   - job: BuildTestProxyDockerImage
     pool:
       vmImage: ubuntu-latest
@@ -435,12 +412,4 @@ jobs:
     pool:
       vmImage: windows-2022
     steps:
-    - task: AzureCLI@2
-      inputs:
-        azureSubscription: 'iot hub sdk service connection'
-        scriptType: 'ps'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          Write-Host "Deleting resource group with name "
-          Write-Host $(RESOURCE_GROUP_NAME)
-          az group delete --name $(RESOURCE_GROUP_NAME) --y
+    - template: templates/DeleteCloudResources.yaml
