--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Track1 .NET Azure IoT Hub and DPS SDKs
 
-*	@timtay-microsoft @lev-i @olivakar @avishekpant
+*	@timtay-microsoft @maximsemenov80 @olivakar @avishekpant
